# os-engine-source

./: .env  .gitignore  AGENTS.md  ELECTRON_GUIDE.md  Integrated Content & Marketing Automation System.py  README.md  Social Factory.py  Social Factorytxtf  TESTING.md  agent_utility_belt.py  analytics_371.py  base_agent.py  base_agent_ver2.py  brokkai_client.py  ceo_mimi.py  cfo_cash.py  chart_script.py  clo_sage.py  cmo_anova.py  content_generation_system.py  convex.config.js  convex_api.py  credential_warehouse.py  credential_warehouse2.py  credential_warehouse_agent.py  cto_alex.py  deployment_system.py  fin_sys_logic.py  financial_system.py  integration_example.py  intelligent_router.py  logic_expanded_action_patterns.py  logic_extractor.py  logic_extractor_extension.py  logic_extractor_extensions2.py  marketing_asst_agent.py  marketing_system.py  mindscript_agent.py  package-lock.json  pyproject.toml  (+20 more)
.github/workflows/: transpile-engine.yml
adaptive_llm_router/: __init__.py  adaptive_llm_router_example.py  adaptive_llm_router_results.md  budget_guard.py  config.py  data_models.py  llm.py  llm_usage.json  policy_engine.py  provider_registry.py  providers.json  usage_ledger.py
agent_utility_belt/: agent_utility_belt_example.py  agent_utility_belt_results.md
base_agent/: base_agent.py  base_agent_example.py  improved-base-agent.md  optimized_base_agent.py  performance_comparison.py
brokkai_client/: brokkai_client_example_agent.py  brokkai_client_results.md
ceo_mimi/: ceo_mimi.md  ceo_mimi.py
cfo_cash/: cfo_cash.md  cfo_cash.py
clo_sage/: clo_sage.md  clo_sage.py
cmo_anova/: cmo_anova.md  cmo_anova.py
convex/: agentTasks.ts  http.ts  qa.ts  schema.ts  tasks.ts
convex/_generated/: api.d.ts
credential_warehouse_agent/: credential_warehouse_agent_results.md  credential_warehouse_example_agent.py
cto_alex/: cto_alex.md  cto_alex.py
deployment_system/: deployment_system_results.md  deployment_system_test.py
electron/: ELECTRON_GUIDE.md  electroncore.md  idb.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  server.py
electron/src/main/: ai-orchestrator.js  knowledge-db.js  system-monitor.js
electron/src/renderer/: app.js  index.html
financial_system/: financial_system_example_agent.py  financial_system_results.md
marketing_asst_agent/: marketing_asst_agent.md  marketing_asst_agent_test.py
mindscript_agent_test/: mindscript_agent_example.py  mindscript_agent_results.md
qa_agent/: qa_agent_results.md  qa_agent_test.py
repo_intake_quick_start/: repo_intake_quick_start.py
router_agent_test/: router_agent_example.py  router_agent_results.md
scripts/: transpile.py
tests/: test_agent_utility_belt.py
